tests/NormalTests/paczka1/fuzzy1/47086654.err
Error in line 4: Vnh A254 4,9
Error in line 7: j2d2DhwTa A676 33,9
Error in line 9: j2d2DhwTa S539 17,7
Error in line 12: j2d2DhwTa A676 83,8
Error in line 15: Vnh A676 25,8
Error in line 26: t1Et0WgQ A676 -5,5
Error in line 25: 0jMJDivaWzZ A254 95,2
Error in line 27: EbLjwVWT A665 196,2
Error in line 29: 0jMJDivaWzZ A676 42,2
Error in line 22: t1Et0WgQ A676 90,1
